--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^2.17.0",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
@@ -29,6 +30,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.2.6",
     "prettier": "^2.2.1",
+    "prisma": "^2.17.0",
     "tailwindcss": "^2.0.3",
     "typescript": "^4.1.5"
   }
