[Back] First endpoint using prisma

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "prettier"
     ],
     "rules": {
+      "camelcase" :"warn",
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
       "prettier/prettier": "error",
