--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prisma:gen" : "prisma generate",
+    "prisma:mig" : "prisma migrate dev --preview-feature"
   },
   "dependencies": {
     "@prisma/client": "^2.17.0",
