--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "prisma:gen" : "prisma generate",
-    "prisma:mig" : "prisma migrate dev --preview-feature"
+    "prisma:gen": "prisma generate",
+    "prisma:mig": "prisma migrate dev --preview-feature"
   },
   "dependencies": {
     "@prisma/client": "^2.17.0",
+    "axios": "^0.21.1",
     "next": "10.0.7",
     "next-auth": "^3.6.1",
     "react": "17.0.1",
