--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "build": "next build",
     "start": "next start",
     "prisma:gen": "prisma generate",
-    "prisma:mig": "prisma migrate dev --preview-feature"
+    "prisma:mig": "prisma migrate dev --preview-feature",
+    "prisma:seed": "prisma db seed --preview-feature"
   },
   "dependencies": {
     "@prisma/client": "^2.17.0",
     "axios": "^0.21.1",
+    "babel-plugin-superjson-next": "^0.2.3",
     "next": "10.0.7",
-    "next-auth": "^3.6.1",
+    "next-auth": "^3.13.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "superjson": "^1.7.3"
   },
   "devDependencies": {
     "@types/next-auth": "^3.1.25",
@@ -37,6 +40,7 @@
     "prettier": "^2.2.1",
     "prisma": "^2.17.0",
     "tailwindcss": "^2.0.3",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   }
 }
