--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS=--trace-warnings next dev",
     "build": "next build",
     "start": "next start",
     "prisma:gen": "prisma generate",
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "babel-plugin-superjson-next": "^0.2.3",
     "date-fns": "^2.19.0",
+    "lodash": "^4.17.21",
     "next": "10.0.7",
     "next-auth": "^3.13.2",
     "react": "17.0.1",
@@ -22,6 +23,7 @@
     "superjson": "^1.7.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/next-auth": "^3.1.25",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
