--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "prettier"
     ],
     "rules": {
+      "no-use-before-define": "off",
       "no-param-reassign": "warn",
       "camelcase" :"warn",
       "react/prop-types": "off",
