--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
     "rules": {
       "no-use-before-define": "off",
       "no-param-reassign": "warn",
+      "no-shadow": "off",
+      "@typescript-eslint/no-shadow": ["error"],
       "camelcase" :"warn",
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
